--- a/xray.html
+++ b/xray.html
@@ -25,7 +25,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('https://lh3.googleusercontent.com/pw/AP1GczOeNAbIOWPm3YYRhmfnEbBCjV-rF8T8RHB-YSVo8xfzY3EZYX2dbEhEkViDYHVrxCf_oTnGGHdbz7wzw3SkmC4MF7FBtKeLQRFWWaikv-1Sdw6BcC96arFgSbynsqeRtiAL0aSHmkypNgh0ajhsTjgU=w358-h478-s-no-gm?authuser=0') center/cover no-repeat;
+      background: url('https://raw.githubusercontent.com/himphgg/Xrayjuliana/refs/heads/main/Polish_20241008_220018020.jpg') center/cover no-repeat;
       clip-path: circle(100px at 50% 50%);
       -webkit-clip-path: circle(100px at 50% 50%);
       pointer-events: none;
