--- a/xray.html
+++ b/xray.html
@@ -16,7 +16,7 @@
       position: relative;
       width: 100vw;
       height: 100vh;
-      background: url('https://lh3.googleusercontent.com/pw/AP1GczMR0KvyGCgC7yVX0d2LJOHlJ6jgrsFTtUhQPfhFnhJxLq160VpjTFUUz5sCE-eX5u2ask9mJkyEH0PCPalGfv3FJwTOvfGMD7CMLCWP1LPsar3KaJLTpGhgeUnNfPwpcXPC-7DVnlf4JMPTeYvVyNyW=w358-h478-s-no-gm?authuser=0') center/cover no-repeat;
+      background: url('https://raw.githubusercontent.com/himphgg/Xrayjuliana/refs/heads/main/Task_3c5cd7ebf132483c.jpg') center/cover no-repeat;
     }
 
     .xray {
